<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.gmail.visualbukkit</groupId>
    <artifactId>visual-bukkit</artifactId>
    <version>1.0</version>
    <packaging>pom</packaging>

    <modules>
        <module>VB-Application</module>
        <module>VB-Block-Generator</module>
        <module>VB-Plugin</module>
        <module>VB-Extensions</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
    </properties>

</project>